Add frontend functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(ArrayValue)
 export(BatchGetDocumentsRequest)
 export(BatchGetDocumentsResponse)
 export(BatchWriteRequest)
-export(BatchWriteRequest.labels)
 export(BatchWriteResponse)
 export(BeginTransactionRequest)
 export(BeginTransactionResponse)
@@ -76,6 +75,9 @@ export(Write)
 export(WriteRequest)
 export(WriteResponse)
 export(WriteResult)
+export(documents.createDocument)
+export(documents.get)
+export(documents.patch)
 export(projects.databases.collectionGroups.fields.get)
 export(projects.databases.collectionGroups.fields.list)
 export(projects.databases.collectionGroups.fields.patch)
