--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.1.9000
 Authors@R: c(
     person(given = "Mark",
            family = "Edmondson",
-           role = c("aut", "cre"),
+           role = c("aut", "cph"),
            email = "m@sunholo.com"),
     person(given = "Juha",
            family = "Itkonen",
