--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Description: Accesses the NoSQL document database built for automatic
     scaling, high performance, and ease of application development.
     Auto-generated via googleAuthR.
 License: MIT + file LICENSE
+URL: https://robonomist.github.io/googleFirestore/, https://github.com/robonomist/googleFirestore
 Imports: 
     googleAuthR (>= 0.3)
 Encoding: UTF-8
