--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,9 +75,10 @@ export(Write)
 export(WriteRequest)
 export(WriteResponse)
 export(WriteResult)
-export(documents.createDocument)
-export(documents.get)
-export(documents.patch)
+export(create_document)
+export(get_document)
+export(list_documents)
+export(patch_documents)
 export(projects.databases.collectionGroups.fields.get)
 export(projects.databases.collectionGroups.fields.list)
 export(projects.databases.collectionGroups.fields.patch)
